// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details reducer should handle FETCH_MOVIE_BY_ID_FAILURE action 1`] = `
Object {
  "error": "Test error message",
  "isLoading": false,
  "movie": Object {
    "genres": Array [],
    "overview": "",
    "poster_path": "",
    "release_date": "",
    "runtime": 0,
    "title": "",
    "vote_average": 0,
  },
  "similarMovies": Array [],
}
`;

exports[`Details reducer should return the initial state 1`] = `
Object {
  "error": "",
  "isLoading": false,
  "movie": Object {
    "genres": Array [],
    "overview": "",
    "poster_path": "",
    "release_date": "2018-01-30",
    "runtime": 0,
    "title": "",
    "vote_average": 0,
  },
  "similarMovies": Array [],
}
`;

exports[`Details reducer should set isLoading after FETCH_MOVIE_BY_ID_REQUEST action 1`] = `
Object {
  "error": "",
  "isLoading": true,
  "movie": Object {
    "genres": Array [],
    "overview": "",
    "poster_path": "",
    "release_date": "",
    "runtime": 0,
    "title": "",
    "vote_average": 0,
  },
  "similarMovies": Array [],
}
`;

exports[`Details reducer should set movie after FETCH_MOVIE_BY_ID_SUCCESS action 1`] = `
Object {
  "error": "",
  "isLoading": false,
  "movie": Object {
    "genres": Array [
      "Test genre",
      "Another test genre",
    ],
    "overview": "Test overview",
    "poster_path": "http://poster.path",
    "release_date": "2020-10-20",
    "runtime": 120,
    "title": "Test tile",
    "vote_average": 9,
  },
  "similarMovies": Array [],
}
`;

exports[`Details reducer should set movie after FETCH_MOVIES_BY_GENRES_SUCCESS action 1`] = `
Object {
  "error": "",
  "isLoading": false,
  "movie": Object {
    "genres": Array [],
    "overview": "",
    "poster_path": "",
    "release_date": "",
    "runtime": 0,
    "title": "",
    "vote_average": 0,
  },
  "similarMovies": Array [
    Object {
      "genres": Array [
        "Test genre",
        "Another test genre",
      ],
      "overview": "Test overview",
      "poster_path": "http://poster.path",
      "release_date": "2020-10-20",
      "runtime": 120,
      "title": "Test tile",
      "vote_average": 9,
    },
    Object {
      "genres": Array [
        "Test genre",
        "Another test genre",
      ],
      "overview": "Test overview",
      "poster_path": "http://poster.path",
      "release_date": "2020-10-20",
      "runtime": 120,
      "title": "Test tile",
      "vote_average": 9,
    },
  ],
}
`;
